<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical"
    android:gravity="top"
    android:background="#333333" >
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="48dp"
        android:background="@drawable/actionbar"
        android:orientation="horizontal"
        android:gravity="center|left"
        >
        <Button
            android:id="@+id/Bto_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#333333"
        android:gravity="left"
        android:padding="8dp"
        android:background="@android:color/transparent"
        android:text="@string/app_name" />
    </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formlongitud" 
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#33b5e5"
        android:padding="8dp"
        />
    <SeekBar 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:progress="8"
    	android:max="32"
    	android:progressDrawable="@drawable/barraclara"
    	android:padding="8dp"
        />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:checked="true"
        android:padding="8dp"
        android:text="@string/formletras"
        android:textColor="#33b5e5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/formnumeros"
        android:textColor="#33b5e5"
        android:textSize="24sp"
        android:textStyle="bold" />
    
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/formmayusculas"
        android:textColor="#33b5e5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/formsimbolos"
        android:textColor="#33b5e5"
        android:textSize="24sp"
        android:textStyle="bold" />

   

</LinearLayout>
    
    
</LinearLayout>
