<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="#333333" 
    tools:context=".MainActivity" >
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="48dp"
        android:background="@drawable/actionbar"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:textSize="18sp"
        android:textColor="#333333"
        android:padding="8sp"
        android:text="@string/app_name" />
        
        <Button 
            android:id="@+id/Bto_Opciones"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botonopt"
		
        
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        
        <ImageView 
    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo"
       android:contentDescription="@string/app_name"
    />
    <TextView
        android:id="@+id/Txt_Contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="#33b5e5"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/app_name" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" 
        >
         <Button 
        android:id="@+id/Bto_Generar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="#333333"
        android:padding="8dp"
        android:background="@drawable/boton"
        android:text="@string/generar"
        />
        
          <Button 
        android:id="@+id/Bto_Copiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="#333333"
        android:padding="8dp"
        android:background="@drawable/boton"
        android:text="@string/copiar"
        />
    </LinearLayout>
   
        
    </LinearLayout>


</LinearLayout>
